# jadia-plot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/jadia_plot/: __init__.py  plot.py
